test_suite/alan-2022-examples/failing/002740_mutation.alan
source W4k begin B3 := 426680 while end
